@@ -1,6 +1,8 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
 @%@~LICENSE:MIT~@%@
 
+saw_073022_1 - Input wrangling and exception propagation.
+
 saw_072922_3 - Version bump: tested on Linux and Win7.
 
 saw_072922_2 - Beginning Windows backend.
